k8s-ranhcher-office/k8s-rancher-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-rancher-office
spec:
  replicas: 1
  selector:
    matchLabels:
      app: k8s-rancher-office
  template:
    metadata:
      labels:
        app: k8s-rancher-office
    spec:
      containers:
      - name: k8s-rancher-office
        image: rancher/rancher:v2.4.8
        imagePullPolicy: Always
        ports:
        - containerPort: 7789
