k8s-ranhcher-office/k8s-rancher-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-rancher-office-svc
  namespace: default
spec:
  ports:
  - name: port
    port: 7789
    protocol: TCP
    targetPort: 7789
  selector:
    app: k8s-rancher-office
  #type: NodePort
